<resources>
	<string name="app_name">Pigeo</string>
	<string name="title_activity_maps">Map</string>
	<string name="logo">logo</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="log_in">Log In</string>
	<string name="password">Password</string>
	<string name="email">Email</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_up">Sign Up</string>
	<string name="have_an_account">Have an Account?</string>
	<string name="required">Field can\'t be empty</string>
	<string name="error">An error occurred while signing in</string>
	<string name="exit_title">Exit App</string>
	<string name="exit_message">Are you sure you want to exit?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="don_t_have_an_account">Don\'t have an account?</string>
	<string name="next">Next</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="full_name">Full Name</string>
	<string name="national_id">National ID</string>
	<string name="sos">SOS</string>
	<string name="settings">settings</string>
	<string name="user">User</string>
	<string name="sign_in_with_google">Sign in with Google</string>
	<string name="recover_password">Recover password</string>
	<string name="name">Name</string>
	<string name="log_out">Log Out</string>
	<string name="edit_profile">Edit profile</string>
	<string name="new_password">New password</string>
	<string name="confirm_new_password">Confirm new password</string>
	<string name="change_if_you_wanna_change_password">Change if you wanna change password</string>
	<string name="phone_number">Phone Number</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="current_password">Current Password</string>
	<string name="home">Home</string>
	<string name="field_cant_be_empty">Field can\'t be empty</string>
	<string name="passwords_dont_match">Passwords don\'t match</string>
	<string name="add_contacts">Add Contacts</string>
	<string name="back">back</string>
	<string name="enter_your_account_email">Enter your account email</string>
	<string name="send_recovery_email">Send Recovery Email</string>
	<string name="recovery_success">A recovery mail has been sent to your email.</string>
	<string name="back_to_homepage">Back to homepage</string>
	<string name="re_sync_contacts">re-sync contacts</string>
	<string name="notification_message">Someone from 1.55km distance needs help!</string>
	<string name="accept">Accept</string>
	<string name="title_activity_sos">Map</string>
	<string name="default_info_title">Default Location</string>
	<string name="default_info_snippet">No places found, because location permission is disabled.</string>
	<string name="option_get_place">Get place</string>
	<string name="pick_place">Choose a place</string>
	<string name="delete">Delete</string>
	<string name="delete_contacts">Delete Contacts</string>
</resources>
