<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		style="@style/Base.Theme.MaterialComponents"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp"
		tools:context=".activities.LoginActivity"
		android:background="#004158">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UselessParent"
			style="@style/Base.Theme.MaterialComponents">
        <ImageView
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:src="@drawable/logo"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"
				style="@style/Base.Theme.MaterialComponents"/>
		<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayout1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:passwordToggleEnabled="false"
				android:textColorHint="#fafafa"
				android:paddingBottom="10dp">
			<EditText
					android:id="@+id/logInEmail"
					style="@style/Base.Theme.MaterialComponents"
					android:hint="@string/email"
					android:inputType="textEmailAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColorHint="#fafafa"
					android:textColor="#fafafa"
					tools:ignore="Autofill"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:passwordToggleEnabled="true"
				android:textColorHint="#fafafa">
			<EditText
					android:id="@+id/logInPassword"
					style="@style/Base.Theme.MaterialComponents"
					android:inputType="textPassword"
					android:hint="@string/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColorHint="#fafafa"
					android:textColor="#fafafa"
					tools:ignore="Autofill"/>
		</android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/email_sign_in"
                android:text="@string/sign_in"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#070707"
				android:layout_marginTop="20dp"
                android:background="@drawable/round_button_green"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
				android:padding="10dp">
            <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/forgotPassword"
					style="@style/Base.Theme.MaterialComponents"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/forgot_password"
                    android:textColor="#fafafa"
                    android:layout_marginEnd="5dp"/>
            <TextView
                    android:id="@+id/recover_password"
					style="@style/Base.Theme.MaterialComponents"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/recover_password"
                    android:textColor="#4095c2"/>
        </LinearLayout>
        <LinearLayout
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <TextView
					style="@style/Base.Theme.MaterialComponents"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#fafafa"
                    android:layout_marginEnd="5dp"/>
            <TextView
					style="@style/Base.Theme.MaterialComponents"
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up"
                    android:textColor="#4095c2"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
