<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.SignUpActivity1"
        android:background="@drawable/gradient">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
        <ImageView
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:src="@drawable/logo"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"/>
        <EditText
                android:id="@+id/signUpEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fafafa"
                android:textColor="#fafafa"
                tools:ignore="Autofill"/>
        <EditText
                android:id="@+id/signUpPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fafafa"
                android:textColor="#fafafa"
                tools:ignore="Autofill"/>
        <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColor="#fafafa"
                android:textColorHint="#fafafa"
                android:inputType="textPassword"
                tools:ignore="Autofill"/>
        <Button
                android:id="@+id/next"
                android:text="@string/next"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:background="@drawable/round_button"/>
    </LinearLayout>

</ScrollView>