<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.SignUpActivity2"
        android:background="#004158"
        style="@style/Base.Theme.MaterialComponents">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent"
            style="@style/Base.Theme.MaterialComponents">
        <ImageView
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:src="@drawable/logo"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"/>
        <EditText
                android:id="@+id/signUpFullName"
				style="@style/Base.Theme.MaterialComponents"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fafafa"
                android:textColor="#fafafa"
                tools:ignore="Autofill"/>
        <EditText
                android:id="@+id/signUpPhoneNumber"
				style="@style/Base.Theme.MaterialComponents"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fafafa"
                android:textColor="#fafafa"
                android:maxLength="14"
                tools:ignore="Autofill"/>
        <EditText
                android:id="@+id/signUpNationalId"
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/national_id"
                android:textColor="#fafafa"
                android:textColorHint="#fafafa"
                android:inputType="number"
                android:maxLength="10"
                tools:ignore="Autofill"/>
        <Button
                android:id="@+id/email_sign_up"
				style="@style/Base.Theme.MaterialComponents"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#070707"
                android:background="@drawable/round_button_green"/>
    </LinearLayout>

</ScrollView>