<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
			style="@style/Base.Theme.MaterialComponents">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
			style="@style/Base.Theme.MaterialComponents">

        <TextView
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

        <TextView
                android:id="@+id/name_label"
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textIsSelectable="true"
                tools:text="Mr. A"/>

        <TextView
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/email_label"
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textIsSelectable="true"
                tools:text="aa@gmail.com"/>

        <TextView
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national_id"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/national_id_label"
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textIsSelectable="true"
                tools:text="1234567891011213"/>

        <TextView
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/phone_number_label"
				style="@style/Base.Theme.MaterialComponents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textIsSelectable="true"
                tools:text="00000000000"/>

        <Button style="@style/Base.Theme.MaterialComponents"
				android:id="@+id/log_out_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/log_out"/>
    </LinearLayout>

</ScrollView>