<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		style="@style/Base.Theme.MaterialComponents"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp"
		tools:context=".activities.RetrievePassword"
		android:background="#004158">
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			tools:ignore="UselessParent"
			style="@style/Base.Theme.MaterialComponents">
		<ImageView
				android:layout_width="200dip"
				android:layout_height="200dip"
				android:src="@drawable/logo"
				android:scaleType="fitXY"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/logo"
				style="@style/Base.Theme.MaterialComponents"/>
		<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayout1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:passwordToggleEnabled="false"
				android:textColorHint="#fafafa">
			<EditText
					android:id="@+id/recovery__email"
					style="@style/Base.Theme.MaterialComponents"
					android:hint="@string/enter_your_account_email"
					android:inputType="textEmailAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColorHint="#fafafa"
					android:textColor="#fafafa"
					tools:ignore="Autofill"/>
		</android.support.design.widget.TextInputLayout>
		<Button
				android:id="@+id/recover_password"
				android:text="@string/send_recovery_email"
				android:layout_gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="#070707"
				android:layout_marginTop="10dp"
				android:background="@drawable/round_button_green"/>

	</LinearLayout>

</ScrollView>
